Fixed visualization issue for Experiment 2

--- a/MSD_analysis_pt1.ipynb
+++ b/MSD_analysis_pt1.ipynb
@@ -52,7 +52,7 @@
     "#149 for 3million songs\n",
     "#199 for 4 million songs\n",
     "\n",
-    "for i in range(149):\n",
+    "for i in range(24):\n",
     "    dfs.append(df1)\n",
     "    dfs.append(df2)\n",
     "    \n",
@@ -202,6 +202,7 @@
     "\n",
     "plt.xticks(x_pos, artists)\n",
     "plt.ylabel('avg(Hotness)')\n",
+    "plt.xlabel('Artist')\n",
     "plt.title('Famous Aritists with highest inconsistency of Song Hotness')\n",
     "plt.show()\n"
    ]
@@ -256,13 +257,11 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "\n",
     "from pyspark.sql import functions as F\n",
     "from pyspark.sql.types import DoubleType\n",
     "from pyspark.sql.functions import isnan\n",
     "from pyspark.sql.functions import col\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
     "msd_df = msd_df.withColumn(\"Duration\", msd_df[\"Duration\"].cast(DoubleType()))\n",
@@ -283,7 +282,7 @@
     "\n",
     "\n",
     "\n",
-    "df_pandas = df_result.toPandas()\n",
+    "df_pandas = pd.DataFrame(df_result, columns=['Decade', 'avg(Duration)', 'min(Duration)', 'avg(Tempo)', 'max(Tempo)', 'avg(ArtistFamiliarity)', 'count(Year)']).iloc[::-1]\n",
     "\n",
     "fig, ax1 = plt.subplots()\n",
     "ax2 = ax1.twinx()\n",
@@ -296,6 +295,7 @@
     "ax2.set_ylabel('Tempo')\n",
     "ax2.legend(loc = 'center right')\n",
     "plt.title('Trendlines of Duration and Tempo over the Decades')\n",
+    "\n",
     "\n",
     "plt.show()\n",
     "\n"
